# Coursework_3

./: .gitignore  README.md  READMI.md  main.py  pyproject.toml  settings.py  utils.py
src/data/: test_data.json
src/tests/: conftest.py  test_Transaction.py  test_data.json  test_main.py  test_utils.py
src/transaction/: Transaction.py  main.py  utils.py
